<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Submission 2 BFAA </string>

    <!--User Details-->
    <string name="id">id :</string>
    <string name="url">url :</string>

    <!--Content Description-->
    <string name="profile_avatar">Profile Avatar</string>
    <string name="logo_dicoding_x_idcamp">Logo Dicoding x IdCamp</string>

    <!--Action Bar-->
    <string name="search">Search</string>
    <string name="search_hint">Search user</string>
    <string name="settings">Settings</string>

    <!--TabLayout-->
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <string name="sentences">
        Hi, there!
        \nYou can use this application for searching a github user by fill the search field in the top of your screen!
        \n\nnb. Tekan tombol pojok kanan atas untuk mengubah ke Bahasa Indonesia!
    </string>
    <string name="you_offline">You are offline. Please, connect to the internet.</string>

    <!--Favorite-->
    <string name="favorite_user">Favorite</string>
    <string name="added_to_favorite">added to favorite</string>
    <string name="removed_from_favorite">removed from favorite</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="nothing_favorite_user_to_show">Nothing Favorite User to Show</string>
    <string name="title_fav_user">Favorite List</string>

    <!--Notificaiton and Language-->
    <string name="key_reminder">reminder</string>
    <string name="reminder">Reminder</string>
    <string name="key_language">language</string>
    <string name="language_preferences">Language</string>

    <string name="reminder_set_up">Daily reminder has activated</string>
    <string name="reminder_turned_off">Daily reminder has turned off</string>

    <string name="notification_title">Github Users</string>
    <string name="notification_message">Let\'s hunt some popular users on github!</string>

</resources>