<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_white_fill_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_favorite_user"
        android:icon="@drawable/ic_fav_fill_white_24dp"
        android:title="@string/favorite_user"
        app:showAsAction="ifRoom" />
</menu>